# tuki_old

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/src/: count.py
lib/src/render/material/: material.hpp
lib/src/render/mesh/: mesh.cpp  mesh.hpp  simple_meshes.cpp  simple_meshes.hpp
lib/src/render/shader/: shader.cpp  shader.hpp
lib/src/tuki/engine/: engine.cpp  engine.hpp
lib/src/tuki/engine/graphics/: default_renderer_3d.cpp  default_renderer_3d.hpp  graphics_system.cpp  graphics_system.hpp  render_passes.cpp  render_passes.hpp  renderer_3d.hpp
lib/src/tuki/engine/scene/: scene.cpp  scene.hpp  scene_node.cpp  scene_node.hpp
lib/src/tuki/engine/scene/component/: attrib.h  component.cpp  component.hpp  material_component.cpp  material_component.hpp  mesh_component.cpp  mesh_component.hpp  point_light_component.cpp  point_light_component.hpp
lib/src/tuki/render/: render.cpp  render.hpp  util.cpp  util.hpp
lib/src/tuki/render/gl/: attrib_initializers.cpp  attrib_initializers.hpp  attribs.cpp  attribs.hpp  blend.cpp  blend.hpp  frame_buffer.cpp  frame_buffer.hpp  mesh_gpu.cpp  mesh_gpu.hpp  render.cpp  render.hpp  render_target.cpp  render_target.hpp  shader.cpp  shader.hpp  texture.cpp
lib/src/tuki/render/material/: material.cpp  material.hpp  shader_pool.cpp  shader_pool.hpp
lib/src/tuki/render/mesh/: attrib_initializers.cpp  attrib_initializers.hpp  mesh.cpp  mesh.hpp  mesh_pool.cpp  mesh_pool.hpp  simple_meshes.cpp  simple_meshes.hpp
lib/src/tuki/render/shader/: shader.cpp  shader.hpp
lib/src/tuki/render/texture/: render_target.cpp  render_target.hpp  texture.cpp  texture.hpp
lib/src/tuki/scene/: component.hpp  scene.hpp  scene_node.cpp  scene_node.hpp
lib/src/tuki/util/: handle.hpp  id_map.cpp  id_map.hpp  mallocr.hpp  multi_sort.hpp  singleton.hpp  util.cpp  util.hpp
lib/src/tuki/util/mallocr/: mallocr_chunk.hpp  mallocr_simple.hpp
lib/src/util/: util.hpp
test_tuki/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
test_tuki/config/: constant_textures.json
test_tuki/material_templates/: flat.json
test_tuki/materials/: red_material.json
test_tuki/shaders/: dl_shade.fs  flat.fs  simple.vs  test2.fs  test2.vs  test3.vs  test4.fs  test4.vs  uv_quad.fs  uv_quad.vs
